homepage and new map

--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
   </head>
 
   <body background="background.jpg">
-    <header class="toolbar">
-      <nav class="toolbar_navigation">
-        <div></div>
-        <div class="toolbar_logo">
-          <a href="index.html">OM5G</a>
-        </div>
-        <div class="spacer"></div>
-        <div class="toolbar_navigation_items"></div>
-      </nav>
-    </header>
-
-    <div id="ourSlogan">
-      <p>so om5g</p>
-    </div>
+    <h2 id="ourSlogan" class="sentence">
+      OM5G IS
+      <div class="verticalFlip">
+        <span>FAST</span>
+        <span>CHEAP</span>
+        <span>RELIABLE</span>
+        <span>QUICK</span>
+        <span>EVERYTHING</span>
+      </div>
+    </h2>
     <div class="button_cont centered" align="center">
       <a
         class="example_a"
