--- a/map.html
+++ b/map.html
@@ -19,8 +19,20 @@
       href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
     />
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="toolbar">
+      <nav class="toolbar_navigation">
+        <div></div>
+        <div class="toolbar_logo">
+          <a href="index.html">OM5G</a>
+        </div>
+        <div class="spacer"></div>
+        <div class="toolbar_navigation_items"></div>
+      </nav>
+    </header>
     <div id="mapid"></div>
     <script>
       var map = L.map("mapid", {
