--- a/web/test.html
+++ b/web/test.html
@@ -1,59 +1,113 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Maa-ameti WMS - Leaflet</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+            rel="stylesheet"
+            href="test.css"
     />
+
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.js"></script>
-  </head>
-  <body>
-    <div id="map" style="height:100vh;"></div>
-    <script type="text/javascript">
-      var crs = new L.Proj.CRS(
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+</head>
+<body>
+<div id="map" style="height:100vh;"></div>
+<script type="text/javascript">
+    var crs = new L.Proj.CRS(
         "EPSG:3301",
         "+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
         {
-          resolutions: [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5]
+            resolutions: [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5]
         }
-      );
-      var map = L.map("map", {
-        crs: crs
-      });
-      map.setView([58.378, 26.729], 9);
+    );
+    var map = L.map("map", {
+        crs: crs,
+    });
 
-      var wms = L.tileLayer.wms(
+    map.setView([58.378, 26.729], 9);
+    var wms = L.tileLayer.wms(
         "https://xgis.maaamet.ee/xgis2/service/32g9/mit",
         {
-          layers: "EESTIFOTO",
-          continuousWorld: true
+            layers: "EESTIFOTO",
+            continuousWorld: true
         }
-      );
-      wms.addTo(map);
+    );
 
-      var wms = L.tileLayer.wms(
+    wms.addTo(map);
+    var wms = L.tileLayer.wms(
         "https://xgis.maaamet.ee/xgis2/service/32g9/mit",
         {
-          layers: "HYBRID",
-          transparent: true,
-          format: "image/png"
+            layers: "HYBRID",
+            transparent: true,
+            format: "image/png"
         }
-      );
-      wms.addTo(map);
+    );
 
-      var wms = L.tileLayer.wms(
+    wms.addTo(map);
+    var wms = L.tileLayer.wms(
         "https://xgis.maaamet.ee/xgis2/service/32g9/mit",
         {
-          layers: "nDSM",
-          transparent: true,
-          format: "image/png"
+            layers: "nDSM",
+            transparent: true,
+            format: "image/png"
         }
-      );
-      wms.addTo(map);
-    </script>
-  </body>
+    );
+
+    wms.addTo(map);
+
+    var editableLayers = new L.FeatureGroup();
+    map.addLayer(editableLayers);
+
+    var drawPluginOptions = {
+        position: 'topleft',
+        draw: {
+            shapeOptions: {
+                color: '#97009c'
+            },
+            polyline: false,
+            circle: false,
+            marker: false,
+            polygon: false,
+        },
+        edit: {
+            featureGroup: editableLayers,
+            edit: false
+        }
+    };
+
+    var drawControl = new L.Control.Draw(drawPluginOptions);
+    map.addControl(drawControl);
+
+    var editableLayers = new L.FeatureGroup();
+    map.addLayer(editableLayers);
+
+    map.on('draw:created', function(e) {
+        var type = e.layerType,
+            layer = e.layer;
+
+        editableLayers.addLayer(layer);
+
+        if (type === 'rectangle') {
+            layer.on('click', function() {
+                alert(layer.getLatLngs());
+            });
+        }
+    });
+
+    map.on('draw:deleted', function(e) {
+        var type = e.layerType,
+            layer = e.layer;
+
+        if (type === 'rectangle') {
+            layer.on('click', function () {
+                editableLayers.remove(layer);
+            });
+        }
+    });
+
+</script>
+</body>
 </html>
