--- a/web/index.html
+++ b/web/index.html
@@ -12,17 +12,20 @@
     <h2 id="ourSlogan" class="sentence">
       OM5G IS
       <div class="verticalFlip">
-        <span>FAST</span>
-        <span>CHEAP</span>
+        <span>POWERFUL</span>
+        <span>AFFORDABLE</span>
         <span>RELIABLE</span>
-        <span>QUICK</span>
-        <span>EVERYTHING</span>
+        <span>MAGICAL</span>
+        <span>ACCURATE</span>
+      </div>
+      <div class="ceo_sentence">
+        "Set up your 5G with us."
       </div>
     </h2>
     <div class="button_cont centered" align="center">
       <a
         class="example_a"
-        href="map.html"
+        href="test.html"
         target="_blank"
         rel="nofollow noopener"
         >Get Started</a
