--- a/web/index.html
+++ b/web/index.html
@@ -1,83 +1,77 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <title>OM5G</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body background="background.jpg">
-    <h2 id="ourSlogan" class="sentence">
-      OM5G IS
-      <div class="verticalFlip">
-        <span>POWERFUL</span>
-        <span>FUTURE</span>
-        <span>RELIABLE</span>
-        <span>MAGICAL</span>
-        <span>ACCURATE</span>
+    <div class="flex_container">
+      <h2 id="ourSlogan" class="sentence">
+        OM5G IS
+        <div class="verticalFlip">
+          <span>POWERFUL</span>
+          <span>FUTURE</span>
+          <span>RELIABLE</span>
+          <span>MAGICAL</span>
+          <span>ACCURATE</span>
+        </div>
+      </h2>
+      <div class="ceo_sentence">
+        "Set up your 5G with us."
       </div>
-    </h2>
-    <div class="ceo_sentence">
-      "Set up your 5G with us."
-    </div>
-    <div class="button_cont centered" align="center">
-      <a
-        class="example_a"
-        href="test.html"
-        target="_blank"
-        rel="nofollow noopener"
-        >Get Started</a
-      >
-    </div>
-
-    <div class="box-of-star1">
-      <div class="star star-position1"></div>
-      <div class="star star-position2"></div>
-      <div class="star star-position3"></div>
-      <div class="star star-position4"></div>
-      <div class="star star-position5"></div>
-      <div class="star star-position6"></div>
-      <div class="star star-position7"></div>
-    </div>
-    <div class="box-of-star2">
-      <div class="star star-position1"></div>
-      <div class="star star-position2"></div>
-      <div class="star star-position3"></div>
-      <div class="star star-position4"></div>
-      <div class="star star-position5"></div>
-      <div class="star star-position6"></div>
-      <div class="star star-position7"></div>
-    </div>
-    <div class="box-of-star3">
-      <div class="star star-position1"></div>
-      <div class="star star-position2"></div>
-      <div class="star star-position3"></div>
-      <div class="star star-position4"></div>
-      <div class="star star-position5"></div>
-      <div class="star star-position6"></div>
-      <div class="star star-position7"></div>
-    </div>
-    <div class="box-of-star4">
-      <div class="star star-position1"></div>
-      <div class="star star-position2"></div>
-      <div class="star star-position3"></div>
-      <div class="star star-position4"></div>
-      <div class="star star-position5"></div>
-      <div class="star star-position6"></div>
-      <div class="star star-position7"></div>
-    </div>
-    <div class="astronaut" data-js="astro">
-      <div class="head"></div>
-      <div class="arm arm-left"></div>
-      <div class="arm arm-right"></div>
-      <div class="body">
-        <div class="panel"></div>
+      <div class="button_cont">
+        <a class="example_a" href="test.html" rel="nofollow noopener"
+          >Get Started</a
+        >
       </div>
-      <div class="leg leg-left"></div>
-      <div class="leg leg-right"></div>
-      <div class="schoolbag"></div>
+      <div class="astronaut" data-js="astro">
+        <div class="head"></div>
+        <div class="arm arm-left"></div>
+        <div class="arm arm-right"></div>
+        <div class="body">
+          <div class="panel"></div>
+        </div>
+        <div class="leg leg-left"></div>
+        <div class="leg leg-right"></div>
+        <div class="schoolbag"></div>
+      </div>
+      <div class="box-of-star1">
+        <div class="star star-position1"></div>
+        <div class="star star-position2"></div>
+        <div class="star star-position3"></div>
+        <div class="star star-position4"></div>
+        <div class="star star-position5"></div>
+        <div class="star star-position6"></div>
+        <div class="star star-position7"></div>
+      </div>
+      <div class="box-of-star2">
+        <div class="star star-position1"></div>
+        <div class="star star-position2"></div>
+        <div class="star star-position3"></div>
+        <div class="star star-position4"></div>
+        <div class="star star-position5"></div>
+        <div class="star star-position6"></div>
+        <div class="star star-position7"></div>
+      </div>
+      <div class="box-of-star3">
+        <div class="star star-position1"></div>
+        <div class="star star-position2"></div>
+        <div class="star star-position3"></div>
+        <div class="star star-position4"></div>
+        <div class="star star-position5"></div>
+        <div class="star star-position6"></div>
+        <div class="star star-position7"></div>
+      </div>
+      <div class="box-of-star4">
+        <div class="star star-position1"></div>
+        <div class="star star-position2"></div>
+        <div class="star star-position3"></div>
+        <div class="star star-position4"></div>
+        <div class="star star-position5"></div>
+        <div class="star star-position6"></div>
+        <div class="star star-position7"></div>
+      </div>
     </div>
   </body>
 </html>
