--- a/web/index.html
+++ b/web/index.html
@@ -7,18 +7,9 @@
   </head>
   <body background="background.jpg">
     <div class="flex_container">
-      <h2 id="ourSlogan" class="sentence">
-        OM5G IS
-        <div class="verticalFlip">
-          <span>POWERFUL</span>
-          <span>FUTURE</span>
-          <span>RELIABLE</span>
-          <span>MAGICAL</span>
-          <span>ACCURATE</span>
-        </div>
-      </h2>
+      <div class="ourSlogan"><img src="images/logo.png" /></div>
       <div class="ceo_sentence">
-        "Set up your 5G with us."
+        INSERT TEXT HERE PLEASE
       </div>
       <div class="button_cont">
         <a class="example_a" href="test.html" rel="nofollow noopener"
