--- a/web/test.html
+++ b/web/test.html
@@ -86,10 +86,21 @@
 
         layer.on("click", function() {
           console.log(layer.getLatLngs());
-          const proj = L.CRS.EPSG3857;
-
+          const projection =
+            "+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs";
           // Degrees to metres
-          console.log(proj.project(new L.LatLng(51, -2)));
+          var lng1 = layer.getLatLngs()[0][0].lat;
+          var lat1 = layer.getLatLngs()[0][0].lng;
+          var lng2 = layer.getLatLngs()[0][2].lat;
+          var lat2 = layer.getLatLngs()[0][2].lng;
+
+          console.log(lng1, lat1, lng2, lat2);
+
+          var estonianCoordinates1 = proj4(projection, [lng1, lat1]);
+          var estonianCoordinates2 = proj4(projection, [lng2, lat2]);
+          console.log(estonianCoordinates1, estonianCoordinates2);
+          var bbox = estonianCoordinates1 + ", " + estonianCoordinates2;
+          console.log(bbox);
         });
       });
     </script>
