--- a/web/test.html
+++ b/web/test.html
@@ -1,128 +1,176 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Maa-ameti WMS - Leaflet</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="test.css" />
+<head>
+    <title>OM5G</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="leaflet.css"/>
+    <link rel="stylesheet" href="leaflet.draw-src.css"/>
+    <link rel="stylesheet" href="test.css"/>
+    <script src="leaflet-src.js"></script>
+    <script src="proj4-src.js"></script>
+    <script src="proj4leaflet.js"></script>
+    <script src="leaflet.draw-src.js"></script
+</head>
+<body>
+<div id="map" style="height:100vh;"></div>
+<script type="text/javascript">
+    const projection = '+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs'
+    const resolutions = [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125];
+    const maxZoom = 16;
 
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
-  </head>
-  <body>
-    <div id="map" style="height:100vh;"></div>
-    <script type="text/javascript">
-      var crs = new L.Proj.CRS(
-        "EPSG:3301",
-        "+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
-        {
-          resolutions: [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5]
-        }
-      );
-      var map = L.map("map", {
+    var crs = new L.Proj.CRS("EPSG:3301", projection, {
+            resolutions: resolutions
+    });
+
+    var map = L.map("map", {
         crs: crs
-      });
+    });
 
-      map.setView([58.378, 26.729], 9);
-      var wms = L.tileLayer.wms(
-        "https://xgis.maaamet.ee/xgis2/service/32g9/mit",
-        {
-          layers: "EESTIFOTO",
-          continuousWorld: true
-        }
-      );
+    map.setView([58.378, 26.729], 9);
 
-      wms.addTo(map);
-      var wms = L.tileLayer.wms(
-        "https://xgis.maaamet.ee/xgis2/service/32g9/mit",
-        {
-          layers: "HYBRID",
-          transparent: true,
-          format: "image/png"
-        }
-      );
+    L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
+        layers: 'EESTIFOTO',
+        continuousWorld: true,
+        maxZoom: maxZoom
+    }).addTo(map);
 
-      wms.addTo(map);
-      var wms = L.tileLayer.wms(
-        "https://xgis.maaamet.ee/xgis2/service/32g9/mit",
-        {
-          layers: "nDSM",
-          transparent: true,
-          format: "image/png"
-        }
-      );
+    L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
+        layers: 'HYBRID',
+        transparent: true,
+        format: 'image/png',
+        maxZoom: maxZoom
+    }).addTo(map);
 
-      wms.addTo(map);
+    L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
+        layers: 'nDSM',
+        transparent: true,
+        format: 'image/png',
+        maxZoom: maxZoom
+    }).addTo(map);
 
-      var editableLayers = new L.FeatureGroup();
-      map.addLayer(editableLayers);
+    var editableLayers = new L.FeatureGroup();
+    map.addLayer(editableLayers);
 
-      var drawPluginOptions = {
-        position: "topleft",
+    var drawPluginOptions = {
+        position: 'topleft',
         draw: {
-          shapeOptions: {
-            color: "#97009c"
-          },
-          polyline: false,
-          circle: false,
-          marker: false,
-          polygon: false
+            shapeOptions: {
+                color: "#97009c"
+            },
+            polyline: false,
+            circle: false,
+            marker: false,
+            polygon: false,
+            circlemarker: false
         },
         edit: {
-          featureGroup: editableLayers,
-          edit: false,
-          remove: false
+            featureGroup: editableLayers,
+            edit: false,
+            remove: false
         }
-      };
+    };
 
-      var drawControl = new L.Control.Draw(drawPluginOptions);
-      map.addControl(drawControl);
+    var drawControl = new L.Control.Draw(drawPluginOptions);
+    map.addControl(drawControl);
 
-      map.on("draw:created", function(e) {
+    var markers = new L.FeatureGroup();
+    map.addLayer(markers);
+
+    map.on("draw:created", function (e) {
         var layer = e.layer;
 
+        markers.clearLayers();
+
+        editableLayers.clearLayers();
         editableLayers.addLayer(layer);
 
-        layer.on("click", function() {
-          console.log(layer.getLatLngs());
-          const projection =
-            "+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs";
-          // Degrees to metres
-          var lng1 = layer.getLatLngs()[0][0].lat;
-          var lat1 = layer.getLatLngs()[0][0].lng;
-          var lng2 = layer.getLatLngs()[0][2].lat;
-          var lat2 = layer.getLatLngs()[0][2].lng;
+        const layerBounds = e.layer.getBounds();
+        const southWest = layerBounds.getSouthWest();
+        const northEast = layerBounds.getNorthEast();
 
-          console.log(lng1, lat1, lng2, lat2);
+        console.log(southWest, northEast);
 
-          var estonianCoordinates1 = proj4(projection, [lat1, lng1]);
-          var estonianCoordinates2 = proj4(projection, [lat2, lng2]);
-          console.log(estonianCoordinates1, estonianCoordinates2);
-          var bbox = estonianCoordinates1 + "," + estonianCoordinates2;
-          console.log(bbox);
-        });
-      });
+        var estonianSouthWest = proj4(projection, [southWest.lng, southWest.lat]);
+        var estonianNorthEast = proj4(projection, [northEast.lng, northEast.lat]);
+        console.log(estonianSouthWest, estonianNorthEast);
 
-      fetch('/get-positions?bbox=657000,6472000,661000,6476000')
-              .then(function(response) {
-                return response.json();
-              })
-              .then(function(result) {
-                console.log(result);
+        var bbox = estonianSouthWest + ',' + estonianNorthEast;
+        console.log(bbox);
 
-                if (Array.isArray(result) && result.length > 0) {
-                  result.forEach((position) => {
-                    console.log('position', position);
+        getPositions(bbox);
+    });
 
-                    var wgs84Coordinates = proj4(projection, proj4.WGS84, [position.x, position.y]);
+    function getPositions(bbox) {
+        socket.send(JSON.stringify({type: 'get-positions', bbox}));
+    }
 
-                    console.log('wgs84Coordinates', wgs84Coordinates);
+    const socket = new WebSocket('ws://' + location.host);
 
-                    L.marker([wgs84Coordinates[1], wgs84Coordinates[0]]).addTo(map);
-                  });
-                }
-              });
-    </script>
-  </body>
+    socket.addEventListener('open', (event) => {
+        console.log('socket open');
+
+        //socket.send(JSON.stringify({type: 'get-positions', bbox: '657000,6472000,661000,6476000'}));
+    });
+
+    socket.addEventListener('message', (event) => {
+        console.log('Message from server ', event.data);
+
+        try {
+            const result = JSON.parse(event.data);
+
+            console.log('result', result);
+
+            if (result.type === 'positions') {
+                handlePositions(result.positions);
+            } else if (result.type === 'positions-done')  {
+
+            }
+        } catch(e) {
+            console.error(e);
+        }
+    });
+
+    function handlePositions(positions) {
+        const currentMarkers = markers.getLayers();
+        const newCoordinates = [];
+
+        if (Array.isArray(positions) && positions.length > 0) {
+            positions.forEach((position) => {
+                console.log('position', position);
+
+                var wgs84Coordinates = proj4(projection, proj4.WGS84, [position.x, position.y]);
+
+                console.log('wgs84Coordinates', wgs84Coordinates);
+
+                newCoordinates.push(new L.LatLng(wgs84Coordinates[1], wgs84Coordinates[0]));
+
+                //const marker = L.marker([wgs84Coordinates[1], wgs84Coordinates[0]]);
+
+                //marker.addTo(markers);
+            });
+        }
+
+        let i = 0;
+
+        while (i < currentMarkers.length && i < newCoordinates.length) {
+            console.log('update marker');
+            currentMarkers[i].setLatLng(newCoordinates[i]);
+            i++;
+        }
+
+        while (i < newCoordinates.length) {
+            console.log('add marker');
+            const marker = new L.Marker(newCoordinates[i]);
+            marker.addTo(markers);
+            i++;
+        }
+
+        while (i < currentMarkers.length) {
+            console.log('remove marker');
+            markers.removeLayer(currentMarkers[i]);
+            i++;
+        }
+    }
+</script>
+</body>
 </html>
