--- a/web/test.html
+++ b/web/test.html
@@ -12,165 +12,171 @@
     <script src="leaflet.draw-src.js"></script
 </head>
 <body>
-<div id="map" style="height:100vh;"></div>
-<script type="text/javascript">
-    const projection = '+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs'
-    const resolutions = [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125];
-    const maxZoom = 16;
+<div id="map" style="height:92vh;">
+    <script type="text/javascript">
+        const projection = '+proj=lcc +lat_1=59.33333333333334 +lat_2=58 +lat_0=57.51755393055556 +lon_0=24 +x_0=500000 +y_0=6375000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs'
+        const resolutions = [2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1, 0.5, 0.25, 0.125, 0.0625, 0.03125];
+        const maxZoom = 16;
 
-    var crs = new L.Proj.CRS("EPSG:3301", projection, {
+        var crs = new L.Proj.CRS("EPSG:3301", projection, {
             resolutions: resolutions
-    });
+        });
 
-    var map = L.map("map", {
-        crs: crs
-    });
+        var map = L.map("map", {
+            crs: crs
+        });
 
-    map.setView([58.378, 26.729], 9);
+        map.setView([58.378, 26.729], 9);
 
-    L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
-        layers: 'EESTIFOTO',
-        continuousWorld: true,
-        maxZoom: maxZoom
-    }).addTo(map);
+        L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
+            layers: 'EESTIFOTO',
+            continuousWorld: true,
+            maxZoom: maxZoom
+        }).addTo(map);
 
-    L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
-        layers: 'HYBRID',
-        transparent: true,
-        format: 'image/png',
-        maxZoom: maxZoom
-    }).addTo(map);
+        L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
+            layers: 'HYBRID',
+            transparent: true,
+            format: 'image/png',
+            maxZoom: maxZoom
+        }).addTo(map);
 
-    L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
-        layers: 'nDSM',
-        transparent: true,
-        format: 'image/png',
-        maxZoom: maxZoom
-    }).addTo(map);
+        L.tileLayer.wms('https://xgis.maaamet.ee/xgis2/service/32g9/mit', {
+            layers: 'nDSM',
+            transparent: true,
+            format: 'image/png',
+            maxZoom: maxZoom
+        }).addTo(map);
 
-    var editableLayers = new L.FeatureGroup();
-    map.addLayer(editableLayers);
+        var editableLayers = new L.FeatureGroup();
+        map.addLayer(editableLayers);
 
-    var drawPluginOptions = {
-        position: 'topleft',
-        draw: {
-            shapeOptions: {
-                color: "#97009c"
+        var drawPluginOptions = {
+            position: 'topleft',
+            draw: {
+                shapeOptions: {
+                    color: "#97009c"
+                },
+                polyline: false,
+                circle: false,
+                marker: false,
+                polygon: false,
+                circlemarker: false
             },
-            polyline: false,
-            circle: false,
-            marker: false,
-            polygon: false,
-            circlemarker: false
-        },
-        edit: {
-            featureGroup: editableLayers,
-            edit: false,
-            remove: false
-        }
-    };
-
-    var drawControl = new L.Control.Draw(drawPluginOptions);
-    map.addControl(drawControl);
-
-    var markers = new L.FeatureGroup();
-    map.addLayer(markers);
-
-    map.on("draw:created", function (e) {
-        var layer = e.layer;
-
-        markers.clearLayers();
-
-        editableLayers.clearLayers();
-        editableLayers.addLayer(layer);
-
-        const layerBounds = e.layer.getBounds();
-        const southWest = layerBounds.getSouthWest();
-        const northEast = layerBounds.getNorthEast();
-
-        console.log(southWest, northEast);
-
-        var estonianSouthWest = proj4(projection, [southWest.lng, southWest.lat]);
-        var estonianNorthEast = proj4(projection, [northEast.lng, northEast.lat]);
-        console.log(estonianSouthWest, estonianNorthEast);
-
-        var bbox = estonianSouthWest + ',' + estonianNorthEast;
-        console.log(bbox);
-
-        getPositions(bbox);
-    });
-
-    function getPositions(bbox) {
-        socket.send(JSON.stringify({type: 'get-positions', bbox}));
-    }
-
-    const socket = new WebSocket('ws://' + location.host);
-
-    socket.addEventListener('open', (event) => {
-        console.log('socket open');
-
-        //socket.send(JSON.stringify({type: 'get-positions', bbox: '657000,6472000,661000,6476000'}));
-    });
-
-    socket.addEventListener('message', (event) => {
-        console.log('Message from server ', event.data);
-
-        try {
-            const result = JSON.parse(event.data);
-
-            console.log('result', result);
-
-            if (result.type === 'positions') {
-                handlePositions(result.positions);
-            } else if (result.type === 'positions-done')  {
-
+            edit: {
+                featureGroup: editableLayers,
+                edit: false,
+                remove: false
             }
-        } catch(e) {
-            console.error(e);
-        }
-    });
+        };
 
-    function handlePositions(positions) {
-        const currentMarkers = markers.getLayers();
-        const newCoordinates = [];
+        var drawControl = new L.Control.Draw(drawPluginOptions);
+        map.addControl(drawControl);
 
-        if (Array.isArray(positions) && positions.length > 0) {
-            positions.forEach((position) => {
-                console.log('position', position);
+        var markers = new L.FeatureGroup();
+        map.addLayer(markers);
 
-                var wgs84Coordinates = proj4(projection, proj4.WGS84, [position.x, position.y]);
+        map.on("draw:created", function (e) {
+            var layer = e.layer;
 
-                console.log('wgs84Coordinates', wgs84Coordinates);
+            markers.clearLayers();
 
-                newCoordinates.push(new L.LatLng(wgs84Coordinates[1], wgs84Coordinates[0]));
+            editableLayers.clearLayers();
+            editableLayers.addLayer(layer);
 
-                //const marker = L.marker([wgs84Coordinates[1], wgs84Coordinates[0]]);
+            const layerBounds = e.layer.getBounds();
+            const southWest = layerBounds.getSouthWest();
+            const northEast = layerBounds.getNorthEast();
 
-                //marker.addTo(markers);
-            });
-        }
+            console.log(southWest, northEast);
 
-        let i = 0;
+            var estonianSouthWest = proj4(projection, [southWest.lng, southWest.lat]);
+            var estonianNorthEast = proj4(projection, [northEast.lng, northEast.lat]);
+            console.log(estonianSouthWest, estonianNorthEast);
 
-        while (i < currentMarkers.length && i < newCoordinates.length) {
-            console.log('update marker');
-            currentMarkers[i].setLatLng(newCoordinates[i]);
-            i++;
-        }
+            var bbox = estonianSouthWest + ',' + estonianNorthEast;
+            console.log(bbox);
 
-        while (i < newCoordinates.length) {
-            console.log('add marker');
-            const marker = new L.Marker(newCoordinates[i]);
-            marker.addTo(markers);
-            i++;
+            getPositions(bbox);
+        });
+
+        function getPositions(bbox) {
+            socket.send(JSON.stringify({type: 'get-positions', bbox}));
         }
 
-        while (i < currentMarkers.length) {
-            console.log('remove marker');
-            markers.removeLayer(currentMarkers[i]);
-            i++;
+        const socket = new WebSocket('ws://' + location.host);
+
+        socket.addEventListener('open', (event) => {
+            console.log('socket open');
+
+            //socket.send(JSON.stringify({type: 'get-positions', bbox: '657000,6472000,661000,6476000'}));
+        });
+
+        socket.addEventListener('message', (event) => {
+            console.log('Message from server ', event.data);
+
+            try {
+                const result = JSON.parse(event.data);
+
+                console.log('result', result);
+
+                if (result.type === 'positions') {
+                    handlePositions(result.positions);
+                } else if (result.type === 'positions-done') {
+
+                }
+            } catch (e) {
+                console.error(e);
+            }
+        });
+
+        function handlePositions(positions) {
+            const currentMarkers = markers.getLayers();
+            const newCoordinates = [];
+
+            if (Array.isArray(positions) && positions.length > 0) {
+                positions.forEach((position) => {
+                    console.log('position', position);
+
+                    var wgs84Coordinates = proj4(projection, proj4.WGS84, [position.x, position.y]);
+
+                    console.log('wgs84Coordinates', wgs84Coordinates);
+
+                    newCoordinates.push(new L.LatLng(wgs84Coordinates[1], wgs84Coordinates[0]));
+
+                    //const marker = L.marker([wgs84Coordinates[1], wgs84Coordinates[0]]);
+
+                    //marker.addTo(markers);
+                });
+            }
+
+            let i = 0;
+
+            while (i < currentMarkers.length && i < newCoordinates.length) {
+                console.log('update marker');
+                currentMarkers[i].setLatLng(newCoordinates[i]);
+                i++;
+            }
+
+            while (i < newCoordinates.length) {
+                console.log('add marker');
+                const marker = new L.Marker(newCoordinates[i]);
+                marker.addTo(markers);
+                i++;
+            }
+
+            while (i < currentMarkers.length) {
+                console.log('remove marker');
+                markers.removeLayer(currentMarkers[i]);
+                i++;
+            }
         }
-    }
-</script>
+    </script>
+</div>
+<div class="underbar">
+    <button class="filler-button">SET BUDGET</button>
+    <button class="filler-button">SELECT RADIO</button>
+    <button class="filler-button">PLACEMENT MODE</button>
+</div>
 </body>
 </html>
