--- a/web/test.html
+++ b/web/test.html
@@ -9,7 +9,7 @@
     <script src="leaflet-src.js"></script>
     <script src="proj4-src.js"></script>
     <script src="proj4leaflet.js"></script>
-    <script src="leaflet.draw-src.js"></script
+    <script src="leaflet.draw-src.js"></script>
 </head>
 <body>
 <div id="map" style="height:92vh;">
