--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 <div class="flex_container">
     <div class="ourSlogan"><img src="images/logo.png"/></div>
     <div class="ceo_sentence">
-        INSERT TEXT HERE PLEASE
+        OMG, look at that data!
     </div>
     <div class="button_cont">
         <a class="example_a" href="test.html" rel="nofollow noopener"
